force-app/main/default/objects/Activity/fields/Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_Notes__c</fullName>
    <inlineHelpText>Feedback on the interview.</inlineHelpText>
    <label>Interview Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>