force-app/main/default/objects/Activity/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Screening</fullName>
            </value>
            <value>
                <fullName>Technical Interview</fullName>
            </value>
            <value>
                <fullName>Managerial Interview</fullName>
            </value>
            <value>
                <fullName>Team Interview</fullName>
            </value>
            <value>
                <fullName>Final Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>